# bcdb

./: .env  .minpackver.toml  .pre-commit-config.yaml  .unibeautifyrc.json  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
.circleci/: config.yml
.github/workflows/: codeql.yml  devskim.yml  lemming.yml  ossar.yml  python-publish.yml  scorecard.yml  tests.yml
src/bcdb/: __init__.py
tests/: test_bcdb.py
