[metadata]
name = bcdb
version = attr: bcdb.__version__
description = Black Cat DataBase is a simple database.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/koviubi56/bcdb
author = Koviubi56
author_email = koviubi56@duck.com
license = GPL
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers = License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
keywords = db, database

[options]
packages =
    bcdb
package_dir =
    =src
zip_safe = no

[options.package_data]
bcdb = py.typed

[pycodestyle]
ignore = E203

[pylama]
ignore = W503

[flake8]
extend-ignore = W503,S101
extend-exclude = venv,*cache*

[isort]
profile = black
