[metadata]
name = bcdb
version = attr: bcdb.__version__
description = Black Cat DataBase is a simple database.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/koviubi56/bcdb
author = Koviubi56
author_email = koviubi56@duck.com
license = GPL
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Database
    Typing :: Typed
keywords = db, database

[options]
packages =
    bcdb
install_requires =
    typing_extensions>=4.0.0
python_requires = >=3.11
package_dir =
    =src
zip_safe = no

[options.package_data]
bcdb = py.typed

[pycodestyle]
ignore = E203

[pylama]
ignore = W503

[flake8]
extend-ignore = W503,S101
extend-exclude = venv,*cache*

[isort]
profile = black

[tool:pytest]
faulthandler_timeout = 5
